# g2p-cpp

./: .gitignore  CMakeLists.txt  README.md  debug.cpp
include/: data.h  g2p.h  tokenize.h  viterbi.h
src/: data.cpp  g2p.cpp  g2p_dll.cpp  tokenize.cpp  viterbi.cpp
